--- a/styles/styles_header.css
+++ b/styles/styles_header.css
@@ -14,6 +14,22 @@
 }
 html, body {
 	font-size: 100%;
+	scroll-behavior: smooth;
+}
+img.scrollToTop {
+	display: none;
+	position: fixed;
+	width: 50px;
+	height: 50px;
+	bottom: 40px;
+	right: 20px;
+	padding: 10px;
+	cursor: pointer;
+	transition: transform 0.3s;
+	z-index: 2;
+}
+img.scrollToTop:hover {
+	transform: scale(1.5);
 }
 span.page-name {
 	display: none;
