--- a/styles/styles_footer.css
+++ b/styles/styles_footer.css
@@ -9,9 +9,15 @@ footer.footer {
 	justify-content: flex-end;
 }
 footer > div.footer {
-	text-align: right;
 	font-size: 1em;
 	font-style: italic;
 	color: var(--color-light);
 	margin: 0.5em 1em;
+}
+
+/* Media queries */
+@media screen and (max-width: 450px) {
+	footer.footer {
+		justify-content: center;
+	}
 }
